2002-03-18  Junichi Uekawa  <dancer@debian.org>

	* debian/rules: install the libs and other things in the right package

	* libdshconfig.h: added some ifndefs.

	* Makefile (install): added include

	* debian/rules (binary-arch): added dh_makeshlibs

	* Makefile (install): make install target to use libtool
	(install): fix minor detail in install target.

	* libdshconfig.c (read_oneline): fix it so that # at the start of line won't cause segv.

	* dsh.conf: modified to make it look different and for debugging dsh.

	* parameter.c (load_configfile): rewrite the config reader using libdshconfig.

	* test-dshconfig.c (main): comment.

	* libdshconfig.c (free_dshconfig): add error check.

	* libdshconfig.h: declare free_dshconfig

	* libdshconfig.c (free_dshconfig): add new function. Probably required.

	* Makefile (install): fixed makefile
	(libdshconfig.la): making a shared lib.

	* libdshconfig.c (read_oneline): fixing many bugs, to make it work. Yeah, it never compiled.
	(read_oneline): fix end bug.

	* libdshconfig.h: add declaration for open_dshconfig

	* test-dshconfig.c (main): create a new program to test the function

2002-02-27  Junichi Uekawa  <dancer@debian.org>

	* debian/changelog: Mark for release

2002-02-05  Junichi Uekawa  <dancer@debian.org>

	* dsh.c: some beautification
	added header files "sys/stat.h" "fnctl.h" declaration
	to get open() to work.

	* libdshconfig.c (open_dshconfig): making a function implementation to hopefully work.

	* debian/changelog: updated the changelog with the bugfixer.

	* dsh.c (open_devnull): created a new function.
	(main): uses /dev/null for input as default.

2002-02-03  Junichi Uekawa  <dancer@debian.org>

	* libdshconfig.c (read_oneline): some minor playing around.
	Aiming to make a basis for config reader usable in dsh, and 
	also another project I am planning to work on.
	
	* libdshconfig.h: created
	(dshconfig): created
	(dshconfig_internal): created

	* libdshconfig.c: creating a new file.
