@@ -26,6 +26,65 @@
 #include <ctype.h>
 #include "libdshconfig.h"
 
+/**
+   The function used to split a line
+
+ */
+dshconfig_internal *
+dshconfig_splitline(const char * original, char delimiter)
+{
+  char * s = strdup (original);
+  dshconfig_internal * d = malloc (sizeof (dshconfig_internal));
+  char * pos, * i;
+  
+  
+  if (!d)
+    return 0;
+  d->next =NULL;
+  
+  if ((pos = strchr(s, delimiter)) == NULL)	/* if the line has no delimiter, it is an error */
+    {
+      return NULL;
+    }
+  *(pos++) = 0; 		/* terminate the string, and pos points to start of "data" */
+  
+  /* removing the space at end of title */
+  for (i = pos - 2; i > s; --i)
+    {
+      if (!isspace (*i))
+	break;
+      else
+	*i = 0;
+    }
+  
+  /* removing the space in the beginning in title */
+  for (i = s; i < pos; ++i)
+    if (!isspace (*i))
+      break;
+  d->title=strdup(i);
+  
+  /* removing the space at the end of data*/
+  for (i = strlen(pos) + pos - 1; i > pos; --i)
+    {
+      if (!isspace (*i))
+	break;
+	  else
+	    *i = 0;
+    }
+  
+  /* removing space at the beginning in data */
+  for (i = pos; i < pos + strlen (pos); ++i)
+    {
+      if (!isspace (*i))
+	break;
+    }
+  
+  d->data=strdup(i);
+  
+  free (s);
+  return d;
+}
+
 /** 
    The ugly function to do the config file reading.
    It will read one non-commentline and return to the caller.
@@ -36,62 +95,30 @@ static dshconfig_internal*
 read_oneline (FILE* f, int delimiter)
 {
   /* read one line and return */
-  dshconfig_internal * d = malloc (sizeof (dshconfig_internal));
+  dshconfig_internal * d = NULL;
   char* s = NULL;
   int size = 0;
   char* pos;
-  char* i;
-
-  if (!d)
-    return 0;
-
+  
   while (getline (&s, &size, f) != -1)
     {
       if (0!=(pos = strchr(s, '#')))	/* handle comments, # and not \# */
 	if ((pos == s) || (*(pos-1) != '\\'))
 	  *pos = 0;
       
-      if ((pos = strchr(s, delimiter)) == NULL)	/* if the line has no delimiter, get another one */
+      if ((strchr(s, delimiter)) == NULL)	/* if the line has no delimiter, get another one */
 	{
 	  continue;
 	}
-      *(pos++) = 0; 		/* terminate the string, and pos points to start of "data" */
 
-      /* removing the space at end of title */
-      for (i = pos - 2; i > s; --i)
-	{
-	  if (!isspace (*i))
-	    break;
-	  else
-	    *i = 0;
-	}
-
-      /* removing the space in the beginning in title */
-      for (i = s; i < pos; ++i)
-	if (!isspace (*i))
-	  break;
-      d->title=strdup(i);
-
-      /* removing the space at the end of data*/
-      for (i = strlen(pos) + pos - 1; i > pos; --i)
-	{
-	  if (!isspace (*i))
-	    break;
-	  else
-	    *i = 0;
-	}
-
-      /* removing space at the beginning in data */
-      for (i = pos; i < pos + strlen (pos); ++i)
-	if (!isspace (*i))
-	  break;
-      d->data=strdup(i);
-
+      d = dshconfig_splitline(s, delimiter);
+      if (!d)
+	continue;
+	
       free (s);
       return d;
     }
   
-  free (d);
   if (s) free (s);
   return 0;
 }
